--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 	"devDependencies": {
 		"@types/common-tags": "^1.8.0",
 		"@types/node": "^14.0.23",
+		"@types/node-fetch": "^2.5.7",
 		"@types/tinycolor2": "^1.4.2",
+		"@types/ws": "^7.2.6",
 		"@typescript-eslint/eslint-plugin": "^3.6.1",
 		"@typescript-eslint/parser": "^3.6.1",
 		"eslint": "^7.4.0",
