--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,22 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "incremental": true,
-    "noEmitOnError": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "target": "es2019",
-    "lib": [
-      "esnext",
-      "esnext.array",
-      "esnext.asynciterable",
-      "esnext.bigint",
-      "esnext.intl",
-      "esnext.symbol"
-    ],
-    "sourceMap": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "src",
-    "outDir": "dist",
-    "declaration": false,
-    "removeComments": true,
-    "alwaysStrict": true,
-    "allowSyntheticDefaultImports": true,
-    "pretty": true
-  }
+	"compilerOptions": {
+		"strict": true,
+		"incremental": true,
+		"noEmitOnError": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"module": "commonjs",
+		"target": "es2019",
+		"lib": ["esnext", "esnext.array", "esnext.asynciterable", "esnext.bigint", "esnext.intl", "esnext.symbol"],
+		"sourceMap": false,
+		"inlineSourceMap": true,
+		"inlineSources": true,
+		"sourceRoot": "src",
+		"outDir": "dist",
+		"declaration": false,
+		"removeComments": true,
+		"alwaysStrict": true,
+		"allowSyntheticDefaultImports": true,
+		"pretty": true
+	}
 }
