--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
 		"common-tags": "^1.8.0",
 		"discord.js": "^12.3.1",
 		"mongoose": "^5.10.2",
-		"node-fetch": "^2.6.0"
-	},
-	"devDependencies": {
+		"node-fetch": "^2.6.0",
 		"@types/common-tags": "^1.8.0",
 		"@types/node": "^14.0.23",
 		"@types/node-fetch": "^2.5.7",
@@ -48,5 +46,6 @@
 		"precise-commits": "^1.0.2",
 		"prettier": "^2.0.5",
 		"typescript": "^3.9.6"
-	}
+	},
+	"devDependencies": {}
 }
