--- a/package.json
+++ b/package.json
@@ -27,24 +27,26 @@
 		}
 	},
 	"dependencies": {
-		"common-tags": "^1.8.0",
-		"discord.js": "^12.3.1",
-		"mongoose": "^5.10.2",
-		"node-fetch": "^2.6.0",
 		"@types/common-tags": "^1.8.0",
 		"@types/node": "^14.0.23",
 		"@types/node-fetch": "^2.5.7",
 		"@types/tinycolor2": "^1.4.2",
+		"@types/twit": "^2.2.27",
 		"@types/ws": "^7.2.6",
 		"@typescript-eslint/eslint-plugin": "^3.6.1",
 		"@typescript-eslint/parser": "^3.6.1",
+		"common-tags": "^1.8.0",
+		"discord.js": "^12.3.1",
 		"eslint": "^7.4.0",
 		"eslint-config-marine": "^7.1.2",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"husky": "^4.2.5",
+		"mongoose": "^5.10.2",
+		"node-fetch": "^2.6.0",
 		"precise-commits": "^1.0.2",
 		"prettier": "^2.0.5",
+		"twit": "^2.2.11",
 		"typescript": "^3.9.6"
 	},
 	"devDependencies": {}
