--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"husky": "^4.2.5",
 		"mongoose": "^5.10.2",
 		"node-fetch": "^2.6.0",
+		"ordinal": "^1.0.3",
 		"precise-commits": "^1.0.2",
 		"prettier": "^2.0.5",
 		"twit": "^2.2.11",
